# CadButEaas

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BENCHMARK_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  P11_REVIEW_DXF_PARSE_RENDER.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  TEST_FILES.md  cad_config.example.toml  cad_config.profiles.toml  struct.json  struct_audit.json  symbol_todo.json  todo.json  todo.md  todo_end_to_end_detector_v1.json  todo_raster_vectorization.json  交付目标.md  验收演示脚本_P11 落实版.md
.cargo/: config.toml
.claude/: QUICKREF.md  WORKFLOW.md  agents.json
.qwen/: state_snapshot.md
benches/: README.md  baseline_v0.1.0.txt
cad-web/: .env.development  .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_FIX_PLAN.json  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  UPLOAD_TEST_GUIDE.md  biome.json  cors-test.html  docker-compose.yml  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  (+5 more)
crates/accelerator-api/: Cargo.toml
crates/accelerator-api/src/: error.rs  lib.rs  trait_def.rs  types.rs
crates/accelerator-cpu/: Cargo.toml
crates/accelerator-cpu/src/: arc_fit.rs  contour_extract.rs  cpu_accelerator.rs  edge_detect.rs  lib.rs  snap.rs
crates/accelerator-registry/: Cargo.toml
crates/accelerator-registry/src/: lib.rs  preferences.rs  registry.rs  strategy.rs
crates/accelerator-wgpu/: Cargo.toml
crates/accelerator-wgpu/src/: arc_fit.rs  context.rs  contour_extract.rs  edge_detect.rs  lib.rs  snap.rs  wgpu_accelerator.rs
crates/acoustic/: Cargo.toml  materials.default.toml
crates/acoustic/src/: acoustic_types.rs  comparative.rs  lib.rs  material_db.rs  reverberation.rs  selection.rs  service.rs
crates/acoustic/tests/: integration_tests.rs
crates/cad-cli/: Cargo.toml
crates/cad-cli/src/: main.rs
crates/cad-viewer/: Cargo.toml  README.md
crates/cad-viewer/src/: api.rs  app.rs  coordinate_compensator.rs  gpu_renderer.rs  gpu_renderer_enhanced.rs  lod_selector.rs  main.rs  viewport_culler.rs
crates/cad-viewer/src/canvas/: mod.rs  overlay_renderer.rs
crates/cad-viewer/src/components/: commands.rs  component.rs  event_collector.rs  mod.rs  registry.rs
crates/cad-viewer/src/panels/: bottom_panel.rs  layer_panel.rs  left_panel.rs  mod.rs  right_panel.rs  toolbar.rs  visual_settings_panel.rs
crates/cad-viewer/src/render/: glass_effect.rs  gpu_renderer_wrapper.rs  gpu_tier.rs  mod.rs  render_queue.rs  renderer.rs  spatial_index.rs
crates/cad-viewer/src/render/shaders/: glass.wgsl
crates/cad-viewer/src/state/: app.rs  loading.rs  mod.rs  render.rs  scene.rs  ui.rs
crates/cad-viewer/src/theme/: mod.rs
crates/common-types/: Cargo.toml
crates/common-types/src/: acoustic.rs  adaptive_tolerance.rs  circuit_breaker.rs  constraint_solver.rs  error.rs  geometry.rs  lib.rs  relative_coords.rs  request.rs  response.rs  robust_geometry.rs  scene.rs  service.rs
crates/common-types/tests/: fault_injection.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/export/: Cargo.toml
crates/export/src/: dxf_writer.rs  formats.rs  lib.rs  service.rs  svg_writer.rs
crates/interact/: Cargo.toml
crates/interact/src/: dirty_rect.rs  lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/benches/: zero_copy_bench.rs
crates/orchestrator/examples/: metrics_server.rs
crates/orchestrator/src/: api.rs  configurable.rs  lib.rs  pipeline.rs  service.rs
crates/orchestrator/src/api/: dto.rs  edges.rs  export.rs  hatch.rs  interaction.rs  upload.rs  websocket.rs
crates/orchestrator/src/pipeline/: configuration.rs  raster.rs  types.rs
crates/orchestrator/tests/: cancel_signal_tests.rs  e2e_tests.rs  integration_tests.rs  perf_regression.rs  raster_semantic_pipeline_tests.rs  raster_vlm_backend_tests.rs  real_dxf_benchmark.rs  test_raster_image_pipeline.rs  user_story_tests.rs  websocket_concurrent_tests.rs
crates/parser/: Cargo.toml
crates/parser/python/: dxf_parser.py
crates/parser/src/: async_parser.rs  builder.rs  cache.rs  dwg_parser.rs  dxf_parser.rs  dxf_version.rs  ezdxf_parser.rs  hatch_parser.rs  lib.rs  parser_factory.rs  parser_trait.rs  pdf_parser.rs  recovery.rs  service.rs  stl_parser.rs  svg_parser.rs  unit_converter.rs
crates/parser/tests/: test_block_insert.rs  test_color_filter.rs  test_dimension_parse.rs  test_dxf_shortcomings.rs  test_edge_cases.rs  test_hatch_parse.rs  test_nurbs_sampling.rs  test_pdf_flate_decode.rs  test_real_dxf_files.rs  test_real_pdf_files.rs
crates/parser/tests/common/: mod.rs
crates/service-kit/: Cargo.toml
crates/service-kit/src/: lib.rs
crates/service-kit/tests/: fault_injection.rs
crates/topo/: Cargo.toml
crates/topo/benches/: benchmark_suite.rs  graph_builder_bench.rs  optimization_bench.rs  parallel_bench.rs  topology_bench.rs
crates/topo/src/: bentley_ottmann.rs  graph_builder.rs  halfedge.rs  lib.rs  loop_extractor.rs  parallel.rs  service.rs  spatial_index.rs  union_find.rs
crates/topo/tests/: benchmarks.rs  halfedge_integration_tests.rs  snap_benchmark.rs
crates/validator/: Cargo.toml
crates/validator/src/: checks.rs  lib.rs  service.rs
crates/vector-graph/: Cargo.toml
crates/vector-graph/src/: features.rs  gnn.rs  graph.rs  lib.rs  training_data.rs
crates/vectorize/: Cargo.toml
crates/vectorize/src/: algorithms.rs  benchmark_data.rs  config.rs  lib.rs  pipeline.rs  quality.rs  semantic.rs  service.rs  test_data.rs
crates/vectorize/src/algorithms/: adaptive_params.rs  arc_fitting.rs  architectural_rules.rs  gap_filling.rs  halfedge_convert.rs  line_type.rs  nurbs_adaptive.rs  ocr.rs  opencv_config.rs  paper_detection.rs  perspective_correction.rs  preprocessing.rs  primitive_fitting.rs  quality.rs  quality_eval.rs  skeleton.rs  symbols.rs  text_blob.rs  threshold.rs  topology_stitch.rs  tracing.rs  vlm.rs
crates/vectorize/src/semantic/: schema.rs  vlm_backend.rs
crates/vectorize/tests/: benchmarks.rs  pdf_real_world_tests.rs  raster_golden_tests.rs  test_raster_pdf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_topology.rs  nurbs_discretize.rs  parse_dxf.rs
(+1387 files in other folders)
