[package]
name = "acoustic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "声学分析服务 - 选区材料统计、房间级 T60 计算、多区域对比分析"

[dependencies]
# 内部依赖
common-types = { path = "../common-types" }

# 序列化
serde = { workspace = true }
schemars = { workspace = true }
toml = "0.8"

# 错误处理
thiserror = { workspace = true }

# 空间索引
rstar = { workspace = true }

# 日志
tracing = { workspace = true }

# 异步
async-trait = { workspace = true }

# 几何处理
geo = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
approx = { workspace = true }
