[package]
name = "cad-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cad"
path = "src/main.rs"

[dependencies]
common-types = { path = "../common-types" }
config = { path = "../config" }
orchestrator = { path = "../orchestrator" }
parser = { path = "../parser" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
bincode = "1.3"

[features]
default = []
opencv = ["orchestrator/opencv"]
