[package]
name = "common-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
geo = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
