[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "统一配置管理 (TOML 配置文件)"

[dependencies]
common-types = { path = "../common-types" }

# 序列化
serde = { workspace = true }
toml = "0.8"

# 错误处理
thiserror = "1.0"

# 日志
tracing = "0.1"
