[package]
name = "export"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common-types = { path = "../common-types" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dxf = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
