[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common-types = { path = "../common-types" }
parser = { path = "../parser" }
vectorize = { path = "../vectorize" }
topo = { path = "../topo" }
validator = { path = "../validator" }
export = { path = "../export" }
interact = { path = "../interact" }
acoustic = { path = "../acoustic" }
config = { path = "../config" }
accelerator-cpu = { path = "../accelerator-cpu" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["multipart", "ws"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true, features = ["util"] }
http = "1.0"
rayon = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
prometheus = { workspace = true }
once_cell = "1.19"

# WebSocket 支持（P11 锐评落实）
tokio-tungstenite = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
common-types = { path = "../common-types" }
config = { path = "../config" }
parser = { path = "../parser" }
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "zero_copy_bench"
harness = false

[features]
default = []
opencv = ["vectorize/opencv"]
