[package]
name = "service-kit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
common-types = { path = "../common-types" }
hdrhistogram = "7"
serde = { workspace = true }
sysinfo = "0.30"
tokio = { workspace = true }
