[package]
name = "topo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common-types = { path = "../common-types" }
serde = { workspace = true }
serde_json = { workspace = true }
geo = { workspace = true }
rstar = { workspace = true }
approx = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
criterion = "0.5"
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "graph_builder_bench"
harness = false

[[bench]]
name = "topology_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false
