[package]
name = "validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common-types = { path = "../common-types" }
serde = { workspace = true }
serde_json = { workspace = true }
geo = { workspace = true }
approx = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
